--- a/README
+++ b/README
@@ -1,3 +1,3 @@
-Dashboard interface to show graphs/table details for devices and urls.
-
-Using data for visualization from the Homework project.
+Dashboard for the Homework project.
+Aim: visualize the devices' usage and urls visited in a local network.
+Data can come from local folder or router live data.
